sh -c causing problem with server.jar, removed

--- a/Minecraft/Game-Server/docker-compose.yml
+++ b/Minecraft/Game-Server/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - minecraft
     environment:
       EULA: "true"
-    command: sh -c "/add-route.sh 'mc.${SERVER}.zackattack.games' ${SERVER}"
+    command: "/add-route.sh 'mc.${SERVER}.zackattack.games' ${SERVER}"
 networks:
   minecraft:
     external: true
